# PySigma-backend-fluxcapacitor

./: README.md  pyproject.toml
sigma/backends/flux/: __init__.py  flux.py  spec.py  utils.py
tests/: conftest.py  test_backend_flux.py
tests/rules/: double_file_ext.yml  test1.yml
