[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySigma-backend-fluxcapacitor"
dynamic = ["version"]
dependencies = ["pysigma", "pysigma-backend-spark"]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.dynamic]
version = { attr = "sigma.backends.flux.__version__" }
